<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etTitulo"
        android:hint="@string/tvTitulo"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etTitulo"
        android:id="@+id/etGenero"
        android:hint="@string/tvGenero"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPlataforma"
        android:layout_below="@+id/etGenero"
        android:hint="@string/tvPlataforma"
        android:visibility="gone" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/etPlataforma">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbPc"
            android:id="@+id/rbPc"
            android:checked="false"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbPs3"
            android:id="@+id/rbPs3"
            android:checked="false"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbXbox"
            android:id="@+id/rbXbox"
            android:checked="false"
            android:onClick="onRadioButtonClicked" />
    </RadioGroup>

</RelativeLayout>